--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-Halo,saya alfandi
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>My Cv</title>
+        <link rel="stylesheet" href="css/stylesheet.css"
+    </head>
+    <body>
+        <div class="profile">
+            <div class="Wrapper_profile">
+                <div class="photo_name">
+                    <img src="images/20230925_174327_0000.png">
+                    <h1>Alfandi Yulviano Saputra</h1>
+                </div>
+                <div class="detail_profile"></div>
+                    <h3>Born</h3>
+                    <p>April 6, 2005 (age 18), Tanggerang, Banten, Indonesia</p>
+                    <h3>Program Studi</h3>
+                    <p>S1 Teknik Fisika</p>
+                    <h3>Asal Instansi</h3>
+                    <p>Universitas Telkom</p>
+                    <h3>Address</h3>
+                    <p>Jalan mangga dua, Sukapura, Kec.Dayeuhkolot,Kabupaten Bandung, Jawa Barat </p>
+                    <h3>Telp</h3>
+                    <p>085361346876</p>
+                    <h3>Email</h3>
+                    <p>alfavino818@gmail.com</p>
+                    <h3>Gender</h3>
+                    <p>male</p>
+                    <h3>Website</h3>
+                    <p>https://alfylvisptra.github.io/</p>
+        <div class="hobbies">
+            <h3>Hobbies</h3>
+            <ul class="flex_box">
+                <li>
+                    <img src="images/hobby/desain.jpeg">
+                    <h4>Desain</h4>
+                    <p>memiliki ketertarikan terhadap dunia desain grafis</p>
+                </li>
+                <li>
+                    <img src="images/hobby/lukis.jpeg">
+                    <h4>Lukis</h4>
+                    <p>hobi dalam menggambar dan melukis dibeberapa media</p>
+                </li>
+                <li>
+                    <img src="images/hobby/musik.jpeg">
+                    <h4>Musik</h4>
+                    <p>Senang mendengarkan musik terutama musik genre mellow</p>
+                </li>
+                <li>
+                    <img src="images/hobby/puzzel.jpeg">
+                    <h4>Permainan Puzzel</h4>
+                    <p>suka bermain permainan papan terutama puzzel dan ludo</p>
+                </li>
+            </ul>
+        <div class="skill experience">
+            <div class="skill">
+                <h3>Skills</h3>
+                 <div class="skill">
+                    <div class="skill_desc">
+                    <h4>Desain Grafis</h4>
+                    <p>membuat rancangan desain grafis dengan bantuan media</p>
+                 </div>
+                 <img src="images/skill/23.jpeg">
+                 <div class="skill">
+                    <div class="skill_desc">
+                    <h4>Microsoft Office</h4>
+                    <p>Mampu mengaplikasikan beberapa aplikasi Microsoft Office</p>
+                 </div>
+                 <img src="images/skill/45.jpeg">
+                 <div class="skill">
+                    <div class="skill_desc">
+                    <h4>Other</h4>
+                    <p>kemampuan lainnya diluar pengaplikasian perangkat lunak</p>
+                 </div>
+                 <img src="images/skill/6.jpeg">
+                </div>
+            </div>
+            <div class="experiences">
+                <h3>Experiences</h3>
+                <h4>2023</h4>
+                <p>Junior Desain Grafis</p>
+                <h4>2023</h4>
+                <p>Trainee mini course Data analytics</p>
+                <h4>2023</h4>
+                <p>Beginner Data analytics</p>
+            </div>
+         </div>
+         
+        <div class="education"></div>
+            <h3>Educations</h3>
+            <div class="container">
+                <div class="edu_left">
+                    <h4>Elementary School</h4>
+                    <p>2011 - 2017 SDN 31 Ujung Labung</p>
+                </div>
+                <div class="edu_right">
+                    <h4>Junior High School</h4>
+                    <p>2017 - 2020 SMPN 1 Tanjung Mutiara</p>
+                </div>
+                <div class="edu_left">
+                    <h4>Senior High School</h4>
+                    <p>2020 - 2023 SMAN 1 Tanjung Mutiara</p>
+                </div>
+                <div class="edu_right">
+                    <h4>Bachelor Degree</h4>
+                    <p>Teknik Fisika, Universitas Telkom</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <h2>Alfandi Yulviano Saputra</h2>
+            <div class="listfooter">
+                <ul>
+                    <li>
+                        <img src="images/footer/ig.jpeg">
+                        <a href="#">Instagram</a>
+                    </li>
+                    <li>
+                        <img src="images/footer/wa.jpeg">
+                        <a href="#">Whatsaap</a>
+                    </li>
+                    <li>
+                        <img src="images/footer/github.png">
+                        <a href="#">Github</a>
+                    </li>
+                </ul>
+        </div>
+
+    </body>
+</html>
